# tms

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  heroku.yml  main.py  pyproject.toml
app/: main.py
app/api/v1/: admin.py  (+3 more)
app/core/: security.py
app/db/: database.py
app/repositories/: ticket.py  user.py
app/repository/: ticket.py  user.py
app/schemas/: ticket.py  user.py
app/services/: activity_log.py  auth.py  ticket.py  user.py
backend/: .pre-commit-config.yaml  Dockerfile  Procfile  backend.dockerfile  heroku.yml
backend/.ebextensions/: 01_fastapi.config
backend/app/: README.md  main.py  pyproject.toml
backend/app/api/v1/: activity_logs.py  admin.py  auth.py  comments.py  tickets.py
backend/app/db/: database.py
backend/app/db/models/: activity_logs.py  comments.py  ticket_updates.py  tickets.py  users.py
backend/app/repositories/: activity_log.py  comment.py  ticket.py  user.py
backend/app/schemas/: activity_log.py  comment.py  ticket.py  user.py
backend/app/services/: activity_log.py  auth.py  comment.py  ticket.py  user.py
backend/app/test/: conftest.py
backend/app/test/api/routes/: test_auth.py  test_comments.py  test_tickets.py
backend/app/test/crud/: test_activity_logs.py  test_comment.py  test_ticket.py  test_users.py
copilot/frontend/: manifest.yml
frontend/: frontend.dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/amplify/: team-provider-info.json
frontend/src/: App.jsx  index.css
mysql-init/: init.sql
(+51 files in other folders)
