[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["AL-SAFWAN <alsafwanuddin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.25"
sqlalchemy-utils = "^0.41.1"
pymysql = "^1.1.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.1"}
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-pagination = "^0.12.17"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401", "E701"]
max-line-length = 88
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
  | README.md
)/
'''